--- a/index.html
+++ b/index.html
@@ -1,213 +1,235 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
 
     <!-- ----------------------Boostrap icons ---------------------->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
     <!-- --------------------------------------------------------- -->
 
     <!-- My CSS -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
     <!-- AKHIR CSS -->
 
     <title>My Portofolio | Sokhi Tatema Telaumbanua</title>
   </head>
   <body id="home">
-
     <!-- NAVBAR -->
-  
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
-  <div class="container">
-    <a class="navbar-brand" href="#">Sokhi Tatema Telaumbanua </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#projects">Projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
- <!--  akhir navbar -->
-
- <!-- JUMBOTRON -->
- <section class="jumbotron text-center">
-  <img src="img/sokhi1.jpg" alt="Sokhi Tatema Telaumbanua" width="200px"  class="rounded-circle img-thumbnail" />
-
-  <h1 class="display-4">Sokhi Tatema Telaumbanua</h1>
-  <p class="lead">student | Pelajar</p>
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffff" fill-opacity="1" d="M0,96L48,106.7C96,117,192,139,288,149.3C384,160,480,160,576,144C672,128,768,96,864,90.7C960,85,1056,107,1152,117.3C1248,128,1344,128,1392,128L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-
-</section>
-<!-- AKHIR JUMBOTRON -->
-
-<!-- About Me -->
-
-<section id="about">
-  <div class="container">
-    <div class="row text-center mb-3">
-      <div class="col">
-       <h2>About Me</h2>
+      <div class="container">
+        <a class="navbar-brand" href="#">Sokhi Tatema Telaumbanua </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#projects">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
       </div>
+    </nav>
+    <!--  akhir navbar -->
+
+    <!-- JUMBOTRON -->
+    <section class="jumbotron text-center">
+      <img src="img/sokhi1.jpg" alt="Sokhi Tatema Telaumbanua" width="200px" class="rounded-circle img-thumbnail" />
+
+      <h1 class="display-4">Sokhi Tatema Telaumbanua</h1>
+      <p class="lead">student | Pelajar</p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ffff"
+          fill-opacity="1"
+          d="M0,96L48,106.7C96,117,192,139,288,149.3C384,160,480,160,576,144C672,128,768,96,864,90.7C960,85,1056,107,1152,117.3C1248,128,1344,128,1392,128L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- AKHIR JUMBOTRON -->
+
+    <!-- About Me -->
+
+    <section id="about">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>About Me</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center fs-5 text-center">
+          <div class="col-md-4">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, id est laborum.</p>
+          </div>
+
+          <div class="col-md-4">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod ex ea commodo nt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
       </div>
-      <div class="row justify-content-center fs-5 text-center">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#e2edff"
+          fill-opacity="1"
+          d="M0,160L48,144C96,128,192,96,288,117.3C384,139,480,213,576,213.3C672,213,768,139,864,133.3C960,128,1056,192,1152,218.7C1248,245,1344,235,1392,229.3L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- Akhir About Me -->
 
-      <div class="col-md-4">
+    <!-- Projects -->
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        id est laborum.</p>
+    <section id="projects">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>My Projects</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <!-- ---------------------------------------------------------------- -->
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/projects/foto7.jpg" class="card-img-top" alt="projects 1" />
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <!-- ----------------------------------------------------------------- -->
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/projects/foto1.jpg" class="card-img-top" alt="projects 2" />
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- ------------------------------------------------------------------ -->
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/projects/foto5.jpg" class="card-img-top" alt="projects 3" />
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <!-- ----------------------------------------------------------- -->
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/projects/foto4.jpg" class="card-img-top" alt="projects 4" />
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- -------------------------------------------------------------- -->
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/projects/foto7.jpg" class="card-img-top" alt="projects 5" />
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- -------------------------------------------------------------- -->
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/projects/foto1.jpg" class="card-img-top" alt="projects 6" />
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <!-- ----------------------------------------------------------- -->
+        </div>
       </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#fff"
+          fill-opacity="1"
+          d="M0,192L26.7,186.7C53.3,181,107,171,160,160C213.3,149,267,139,320,128C373.3,117,427,107,480,138.7C533.3,171,587,245,640,256C693.3,267,747,213,800,165.3C853.3,117,907,75,960,101.3C1013.3,128,1067,224,1120,229.3C1173.3,235,1227,149,1280,112C1333.3,75,1387,85,1413,90.7L1440,96L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
 
-       <div class="col-md-4">
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-         ex ea commodo
-        nt in culpa qui officia deserunt mollit anim id est laborum.</p>
-       </div>
+    <!-- Akhir Projects -->
+
+    <!-- CONTACT -->
+    <section id="contact">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>Contact Me</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center mb-3">
+          <div class="col-md-6">
+            <form>
+              <div class="mb-3">
+                <label for="name" class="form-label">Nama Lengkap</label>
+                <input type="text" class="form-control" id="name" aria-describedby="name" />
+              </div>
+              <!-- -------------------------------------------------- -->
+              <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" aria-describedby="email" />
+              </div>
+              <!-- ------------------------------------------ -->
+
+              <div class="mb-3">
+                <label for="pesan" class="form-label">Pesan</label>
+                <textarea class="form-control" id="pesan" rows="3"></textarea>
+              </div>
+              <!-- --------------------------------------------------- -->
+              <button type="submit" class="btn btn-success">Kirim</button>
+            </form>
+          </div>
+        </div>
       </div>
-     </div>
-     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#e2edff" fill-opacity="1" d="M0,160L48,144C96,128,192,96,288,117.3C384,139,480,213,576,213.3C672,213,768,139,864,133.3C960,128,1056,192,1152,218.7C1248,245,1344,235,1392,229.3L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-</section>
-<!-- Akhir About Me -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#0d6efd"
+          fill-opacity="1"
+          d="M0,128L40,133.3C80,139,160,149,240,149.3C320,149,400,139,480,117.3C560,96,640,64,720,90.7C800,117,880,203,960,213.3C1040,224,1120,160,1200,133.3C1280,107,1360,117,1400,122.7L1440,128L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- Akhir CONTACT -->
 
-<!-- Projects -->
-
-<section id="projects">
-  <div class="container">
-    <div class="row text-center mb-3">
-      <div class="col">
-        <h2>My Projects</h2>
-      </div>
-    </div>
-    <div class="row justify-content-center">
-
-<!-- ---------------------------------------------------------------- -->
-      <div class="col-md-4 mb-3">
-        <div class="card">
-  <img src="img/projects/foto7.jpg" class="card-img-top" alt="projects 1">
-  <div class="card-body">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-  </div>
-      </div>
- <!-- ----------------------------------------------------------------- -->
- <div class="col-md-4 mb-3">
-        <div class="card">
-  <img src="img/projects/foto1.jpg" class="card-img-top" alt="projects 2">
-  <div class="card-body">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-  </div>
-      </div>
-
-<!-- ------------------------------------------------------------------ -->
- <div class="col-md-4 mb-3">
-        <div class="card">
-  <img src="img/projects/foto5.jpg" class="card-img-top" alt="projects 3">
-  <div class="card-body">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-  </div>
-      </div>
-<!-- ----------------------------------------------------------- -->
- <div class="col-md-4 mb-3">
-        <div class="card">
-  <img src="img/projects/foto4.jpg" class="card-img-top" alt="projects 4">
-  <div class="card-body">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-  </div>
-      </div>
-
-<!-- -------------------------------------------------------------- -->
- <div class="col-md-4 mb-3">
-        <div class="card">
-  <img src="img/projects/foto7.jpg" class="card-img-top" alt="projects 5">
-  <div class="card-body">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-  </div>
-      </div>
-
-<!-- -------------------------------------------------------------- -->
-<div class="col-md-4 mb-3">
-        <div class="card">
-  <img src="img/projects/foto1.jpg" class="card-img-top" alt="projects 6">
-  <div class="card-body">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-  </div>
-    </div>
-<!-- ----------------------------------------------------------- -->
-</div>
-  </div>
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,192L26.7,186.7C53.3,181,107,171,160,160C213.3,149,267,139,320,128C373.3,117,427,107,480,138.7C533.3,171,587,245,640,256C693.3,267,747,213,800,165.3C853.3,117,907,75,960,101.3C1013.3,128,1067,224,1120,229.3C1173.3,235,1227,149,1280,112C1333.3,75,1387,85,1413,90.7L1440,96L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"></path></svg>
-</section>
-
-<!-- Akhir Projects -->
-
-<!-- CONTACT -->
-<section id="contact">
-  <div class="container">
-    <div class="row text-center mb-3">
-      <div class="col">
-        <h2>Contact Me</h2>
-      </div>
-    </div>
-    <div class="row justify-content-center mb-3">
-      <div class="col-md-6">
-        <form>
-
-  <div class="mb-3">
-    <label for="name" class="form-label">Nama Lengkap</label>
-    <input type="text" class="form-control" id="name" aria-describedby="name">
-  </div>
-<!-- -------------------------------------------------- --> 
-  <div class="mb-3">
-    <label for="email" class="form-label">Email</label>
-    <input type="email" class="form-control" id="email" aria-describedby="email">
-  </div>
-  <!-- ------------------------------------------ -->
-
-  <div class="mb-3">
-  <label for="pesan" class="form-label">Pesan</label>
-  <textarea class="form-control" id="pesan" rows="3"></textarea>
-</div>
-<!-- --------------------------------------------------- -->
-  <button type="submit" class="btn btn-primary">Kirim</button>
-</form>    
-      </div>
-    </div>
-  </div>
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,128L40,133.3C80,139,160,149,240,149.3C320,149,400,139,480,117.3C560,96,640,64,720,90.7C800,117,880,203,960,213.3C1040,224,1120,160,1200,133.3C1280,107,1360,117,1400,122.7L1440,128L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
-</section>
-<!-- Akhir CONTACT -->
-
-<!-- footer -->
-<footer class="bg-primary text-white text-center pb-5">
-  <p>Created With <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/alberthus98/" class="text-white fw-bold">Sokhi Tatema</a></p>
-</footer>
-<!-- Akhir Footer -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-    
+    <!-- footer -->
+    <footer class="bg-primary text-white text-center pb-5">
+      <p>Created With <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/alberthus98/" class="text-white fw-bold">Sokhi Tatema</a></p>
+    </footer>
+    <!-- Akhir Footer -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
