--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <!-- ----------------------------------------------------------------- -->
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/foto1.jpg" class="card-img-top" alt="projects 2" />
+              <img src="img/projects/login.png" class="card-img-top" alt="projects 2" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
@@ -139,7 +139,7 @@
           <!-- ----------------------------------------------------------- -->
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/foto4.jpg" class="card-img-top" alt="projects 4" />
+              <img src="img/projects/tugas.png" class="card-img-top" alt="projects 4" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
@@ -159,7 +159,7 @@
           <!-- -------------------------------------------------------------- -->
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/foto1.jpg" class="card-img-top" alt="projects 6" />
+              <img src="img/projects/layar.png" class="card-img-top" alt="projects 6" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
@@ -206,7 +206,7 @@
                 <textarea class="form-control" id="pesan" rows="3"></textarea>
               </div>
               <!-- --------------------------------------------------- -->
-              <button type="submit" class="btn btn-success">Kirim</button>
+              <button type="submit" class="btn btn-primary">Kirim</button>
             </form>
           </div>
         </div>
