--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 
     <!-- JUMBOTRON -->
     <section class="jumbotron text-center">
-      <img src="img/sokhi1.jpg" alt="Sokhi Tatema Telaumbanua" width="200px" class="rounded-circle img-thumbnail" />
+      <img src="img/sokhi1.jpg" alt="Sokhi Tatema Telaumbanua" width="170px" class="rounded-circle img-thumbnail" />
 
       <h1 class="display-4">Sokhi Tatema Telaumbanua</h1>
-      <p class="lead">student | Pelajar</p>
+      <p class="lead">Mahasiswa</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffff"
@@ -189,24 +189,38 @@
         </div>
         <div class="row justify-content-center mb-3">
           <div class="col-md-6">
-            <form>
+            <!-- -------------------------------- -->
+            <div class="alert alert-success alert-dismissible fade show d-none my-alert"  role="alert">
+          <strong>Terima Kasih</strong>  Pesan Anda Telah Kami Terima. <i class="bi bi-check-lg"></i>
+         <button type="button" class="btn-close" data-bs-dismiss="alert"aria-label="Close"></button>
+          </div>
+            <!-- ---------------------------- -->
+
+            <form name='Sokhi-Tatema-Contact-Form'>
+
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Lengkap</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name" />
+                <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
               </div>
               <!-- -------------------------------------------------- -->
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" />
+                <input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
               </div>
               <!-- ------------------------------------------ -->
 
               <div class="mb-3">
                 <label for="pesan" class="form-label">Pesan</label>
-                <textarea class="form-control" id="pesan" rows="3"></textarea>
+                <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
               </div>
               <!-- --------------------------------------------------- -->
-              <button type="submit" class="btn btn-primary">Kirim</button>
+              <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
+<!-- ------------------------------------------------------------------------------ -->
+              <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+               Loading...
+          </button>
+<!-- --------------------------------------------------------------------------------------------- -->
             </form>
           </div>
         </div>
@@ -231,5 +245,48 @@
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
       crossorigin="anonymous"
     ></script>
+
+<script>
+  const scriptURL = 'https://script.google.com/macros/s/AKfycbzaTc6Yy9sZPW0Sch_-SeY00-MUO0SB_wYRr04q0orRYkg5oiK1-cbw9QsWDh-dVsEk/exec'
+
+
+  const form = document.forms['Sokhi-Tatema-Contact-Form']
+
+  const btnKirim = document.querySelector('.btn-kirim');
+
+  const btnLoading =  document.querySelector('.btn-loading');
+  const myAlert =  document.querySelector('.my-alert');
+
+
+
+  form.addEventListener('submit', e => {
+
+    e.preventDefault()
+
+    // ketika tombol submit di klik
+    // tampilkan tobol loading hilangkan tombol kirim
+    btnLoading.classList.toggle("d-none");
+    btnKirim.classList.toggle("d-none");
+
+    
+    fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+      .then(response => {
+        // ketika tombol submit di klik
+    // tampilkan tobol kirim hilangkan tombol loading
+         btnLoading.classList.toggle("d-none");
+          btnKirim.classList.toggle("d-none");
+
+          // Tampilkan Allert
+          myAlert.classList.toggle("d-none");
+
+          // RESET FORM
+          form.reset();
+
+    
+        console.log('Success!', response)
+      })
+      .catch(error => console.error('Error!', error.message))
+  })
+</script>
   </body>
 </html>
