--- a/index.html
+++ b/index.html
@@ -190,14 +190,13 @@
         <div class="row justify-content-center mb-3">
           <div class="col-md-6">
             <!-- -------------------------------- -->
-            <div class="alert alert-success alert-dismissible fade show d-none my-alert"  role="alert">
-          <strong>Terima Kasih</strong>  Pesan Anda Telah Kami Terima. <i class="bi bi-check-lg"></i>
-         <button type="button" class="btn-close" data-bs-dismiss="alert"aria-label="Close"></button>
-          </div>
+            <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+              <strong>Terima Kasih</strong> Pesan Anda Telah Kami Terima. <i class="bi bi-check-lg"></i>
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
             <!-- ---------------------------- -->
 
-            <form name='Sokhi-Tatema-Contact-Form'>
-
+            <form name="Sokhi-Tatema-Contact-Form">
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Lengkap</label>
                 <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
@@ -215,12 +214,12 @@
               </div>
               <!-- --------------------------------------------------- -->
               <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
-<!-- ------------------------------------------------------------------------------ -->
+              <!-- ------------------------------------------------------------------------------ -->
               <button class="btn btn-primary btn-loading d-none" type="button" disabled>
-            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-               Loading...
-          </button>
-<!-- --------------------------------------------------------------------------------------------- -->
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                Loading...
+              </button>
+              <!-- --------------------------------------------------------------------------------------------- -->
             </form>
           </div>
         </div>
@@ -246,47 +245,41 @@
       crossorigin="anonymous"
     ></script>
 
-<script>
-  const scriptURL = 'https://script.google.com/macros/s/AKfycbzaTc6Yy9sZPW0Sch_-SeY00-MUO0SB_wYRr04q0orRYkg5oiK1-cbw9QsWDh-dVsEk/exec'
+    <script>
+      const scriptURL = "https://script.google.com/macros/s/AKfycbzaTc6Yy9sZPW0Sch_-SeY00-MUO0SB_wYRr04q0orRYkg5oiK1-cbw9QsWDh-dVsEk/exec";
 
+      const form = document.forms["Sokhi-Tatema-Contact-Form"];
 
-  const form = document.forms['Sokhi-Tatema-Contact-Form']
+      const btnKirim = document.querySelector(".btn-kirim");
 
-  const btnKirim = document.querySelector('.btn-kirim');
+      const btnLoading = document.querySelector(".btn-loading");
+      const myAlert = document.querySelector(".my-alert");
 
-  const btnLoading =  document.querySelector('.btn-loading');
-  const myAlert =  document.querySelector('.my-alert');
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
 
-
-
-  form.addEventListener('submit', e => {
-
-    e.preventDefault()
-
-    // ketika tombol submit di klik
-    // tampilkan tobol loading hilangkan tombol kirim
-    btnLoading.classList.toggle("d-none");
-    btnKirim.classList.toggle("d-none");
-
-    
-    fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-      .then(response => {
         // ketika tombol submit di klik
-    // tampilkan tobol kirim hilangkan tombol loading
-         btnLoading.classList.toggle("d-none");
-          btnKirim.classList.toggle("d-none");
+        // tampilkan tobol loading hilangkan tombol kirim
+        btnLoading.classList.toggle("d-none");
+        btnKirim.classList.toggle("d-none");
 
-          // Tampilkan Allert
-          myAlert.classList.toggle("d-none");
+        fetch(scriptURL, { method: "POST", body: new FormData(form) })
+          .then((response) => {
+            // ketika tombol submit di klik
+            // tampilkan tobol kirim hilangkan tombol loading
+            btnLoading.classList.toggle("d-none");
+            btnKirim.classList.toggle("d-none");
 
-          // RESET FORM
-          form.reset();
+            // Tampilkan Allert
+            myAlert.classList.toggle("d-none");
 
-    
-        console.log('Success!', response)
-      })
-      .catch(error => console.error('Error!', error.message))
-  })
-</script>
+            // RESET FORM
+            form.reset();
+
+            console.log("Success!", response);
+          })
+          .catch((error) => console.error("Error!", error.message));
+      });
+    </script>
   </body>
 </html>
