--- a/index.html
+++ b/index.html
@@ -146,7 +146,16 @@
               </div>
             </div>
           </div>
-         
+          <!-- ------------------- isi foto--------------------------------------- -->
+          <div class="col-md-4 mb-3">
+            <div class="card" data-aos="zoom-in-up" data-aos-duration="500" data-aos-delay="200">
+              <img src="img/projects/14.jpg" class="card-img-top" alt="projects 1" />
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+
           <!-- ----------------------isi foto------------------------------------------ -->
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="zoom-in-up" data-aos-duration="500" data-aos-delay="300">
@@ -233,7 +242,7 @@
           <!-- ----------------8----------------------- -->
           <div class="col-md-3">
             <a href="#">
-              <img src="img/gallery/14.jpg" alt="gambar 8" class="img-fluid gallery-img" />
+              <img src="img/gallery/10.jpg" alt="gambar 8" class="img-fluid gallery-img" />
             </a>
           </div>
           <!-- --------------------9------------------------- -->
